--- a/css/styles.css
+++ b/css/styles.css
@@ -14,3 +14,11 @@ body{
 img {
   float: left;
 }
+ul {
+  line-height: 30px;
+  font-style: italic;
+}
+.side-bar{
+  float: right;
+  width: 35%;
+}
